deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nodejs-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-demo
  template:
    metadata:
      labels:
        app: nodejs-demo
    spec:
      containers:
        - name: myapp
          image: kerstin1106/nodejs-server:v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
