service.yml
apiVersion: v1
kind: Service
metadata: 
  name: nodejs-demo
spec:
  selector:
    app: nodejs-demo
  type: NodePort
  ports:
    - name: name-of-the-port
      protocol: TCP
      port: 8080
      targetPort: 3000
      nodePort: 30002
